Updated the angular2-text-mask to imask Libaray - Fixed the application details , Clean up log, Damaged Property address, Occupants,  profile verification, contact info, personal details mponents to use the Imask Library

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -403,7 +403,7 @@
                 matInput required
                 [readonly]="isReadOnly == true"
                 placeholder="Contact Telephone"
-                [textMask]="{ mask: phoneMask, keepCharPositions: true }" />
+                [imask]="phoneMask" />
               <mat-error
                 *ngIf="
                   damagedPropertyAddressForm.get('landlordPhone').invalid &&
@@ -504,7 +504,7 @@
                 matInput 
                 [readonly]="isReadOnly == true"
                 placeholder="Contact Telephone"
-                [textMask]="{ mask: phoneMask, keepCharPositions: true }" />
+                [imask]="phoneMask" />
               <mat-error
                 *ngIf="
                   damagedPropertyAddressForm.get('landlordPhone2').invalid &&
