Updated angular packages  @angular/core@17 @angular/cli@17 and the dependent packages from 16 to 17

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md-4">
           <p class="sub-heading" style="font-size: 15px">Need help?</p>
-          If you can't provide the required documents to submit your application, please contact us at DFA.Private@gov.bc.ca or call toll free at 1-844-537-7377 for help.
+          If you can't provide the required documents to submit your application, please contact us at DFA.Private&#64;gov.bc.ca or call toll free at 1-844-537-7377 for help.
         </div>
       </div>
       <div class="row">
