--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/consent/consent.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/consent/consent.component.html
@@ -17,7 +17,7 @@
           <p style="font-size: 15px">
             Personal information on this form is collected by the Ministry of Emergency Management and Climate Readiness under section 26(c) and 27(1)(a) and (b) of the
             Freedom of Information and Protection of Privacy Act (FOIPPA). The information will be used to evaluate your pre, and post-disaster circumstances to determine
-            eligibility for Disaster Financial Assistance. If you have any questions about the collection of this information, contact 1-888-257-4777 or DFA.Private@gov.bc.ca.
+            eligibility for Disaster Financial Assistance. If you have any questions about the collection of this information, contact 1-888-257-4777 or DFA.Private&#64;gov.bc.ca.
           </p>
         </div>
 
