[EMCRI-282] Front-end UI not autheticating

--- a/dfa-public/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
@@ -31,28 +31,14 @@
         </div>
 
         <div class="col-md-4 menu-responsive">
-          <ng-container
-            *ngIf="
-              showLoginMatMenu &&
-              (formCreationService.personalDetailsForm$ | async)?.value
-                ?.lastName &&
-              (formCreationService.personalDetailsForm$ | async)?.value
-                ?.firstName
-            "
-          >
+          <ng-container *ngIf="showLoginMatMenu" >
             <button mat-button class="button-align" [matMenuTriggerFor]="menu">
               <div class="row">
                 <div class="col-md-8">
                   <span style="color: white"
-                    ><b>{{
-                      (formCreationService.personalDetailsForm$ | async)?.value
-                        ?.lastName | uppercase
-                    }}</b
+                    ><b>{{ "Wayne" }}</b
                     >,
-                    {{
-                      (formCreationService.personalDetailsForm$ | async)?.value
-                        ?.firstName
-                    }}</span
+                    {{ "Bruce" }}</span
                   >
                 </div>
                 <div class="col-md-4">
