--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -1,84 +1,64 @@
 <div class="container container-frame">
+  <div class="row">
+    <div class="col-md-6 heading-container">
+      <span class="page-heading">{{ this.businessName }}</span>
+    </div>
+    <div class="col-md-6">
+      <button *ngIf="hasActiveEvents == true" class="button-p save-button" mat-button
+        (click)="navigateToDFAApplicationCreate()">
+        Create a New Application
+      </button>
+    </div>
 
-  <div class="row heading-container">
-    <div class="col-md-12">
-      <span class="page-heading">{{ businessName }}</span>
+    <div *ngIf="hasActiveEvents == false">
+      <br />
+      <b>
+        There are currently no active events, please visit our website
+        <a target="_blank"
+          href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance">Financial
+          assistance in a disaster</a>
+        for more information
+      </b>
     </div>
   </div>
-
   <br />
 
-  <div class="col-12 content-container">
+  <div class="col-12 content-container infoText">
     <div class="row">
-      <div class="col-md-12 important-message">
-        <div class="align-w-icon">
-          <div class="material-icons dashbd-infoIconStyle">info</div>
-          <div class="page-subheadbold">This page is for Indigenous communities or local governments.</div>
-        </div>
-          <p>If you are a homeowner, residential tenant, small business, farm, or charitable organization your process is
-          different: <a target="_blank"
-            href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance">DFA
-            process for individuals, small businesses, farms, and charitable organizations.</a>
-          </p>
+      <div class="infoIconCol">
+        <div class="material-icons infoIconStyle">info</div>
       </div>
-      <div class="col-md-6"></div>
-      <div class="row">
-        <div class="col-md-6">
-          <button *ngIf="hasActiveEvents == true" class="button-p notice-button left-align"
-            (click)="navigateToDFAApplicationCreate()">
-            Create New Application
-          </button>
-        </div>
-
-        <div *ngIf="hasActiveEvents == false">
-          <br />
-          <b>
-            There are currently no active events, please visit our website
-            <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance">Financial assistance in a disaster</a>
-            for more information
-          </b>
-       </div>
-         
-        
+      <div class="col-md-11 page-subheadbold">
+        This page is for Indigenous communities or local governments.
       </div>
-      <div class="col-md-6"></div>
     </div>
-    <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
-      <!--<app-alert></app-alert>-->
-
-      <nav mat-tab-nav-bar dynamicHeight>
-        <a
-          mat-tab-link
-          *ngFor="let tabItem of tabs"
-          [routerLink]="tabItem.route"
-          routerLinkActive="active-tab"
-           class="tabHead"
-        >
-          <img
-            class="inactive-curr"
-            [src]="tabItem.inactiveImage"
-            height="15"
-            width="15"
-          />
-          <img
-            class="active-curr"
-            [src]="tabItem.activeImage"
-            height="15"
-            width="15"
-          />
-          <!--&nbsp;&nbsp; {{ tabItem.label }}-->
-          &nbsp;&nbsp; {{ tabItem.label != "Profile" ? tabItem.label + " (" + tabItem.count + ")" : tabItem.label }}
-        </a>
-      </nav>
-      <!-- <router-outlet></router-outlet> -->
-      <app-loader
-        class="spinner"
-        [showLoader]="isLoading"
-        strokeWidth="10"
-        diameter="50"
-      >
-      </app-loader>
-</div>
+    <div class="row">
+      <div class="infoIconCol"></div>
+      <div class="col-md-11">
+        If you are a homeowner, residential tenant, small business, farm, or charitable organization your process is
+        different: <a target="_blank"
+        href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance">DFA
+        process for individuals, small businesses, farms, and charitable organizations.</a>
+      </div>
+    </div>
   </div>
 
+  <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
+    <!--<app-alert></app-alert>-->
+
+    <nav mat-tab-nav-bar dynamicHeight>
+      <a mat-tab-link *ngFor="let tabItem of tabs" [routerLink]="tabItem.route" routerLinkActive="active-tab"
+        class="tabHead">
+        <img class="inactive-curr" [src]="tabItem.inactiveImage" height="15" width="15" />
+        <img class="active-curr" [src]="tabItem.activeImage" height="15" width="15" />
+        <!--&nbsp;&nbsp; {{ tabItem.label }}-->
+        &nbsp;&nbsp; {{ tabItem.label != "Profile" ? tabItem.label + " (" + tabItem.count + ")" : tabItem.label }}
+      </a>
+    </nav>
+    <!-- <router-outlet></router-outlet> -->
+    <app-loader class="spinner" [showLoader]="isLoading" strokeWidth="10" diameter="50">
+    </app-loader>
+  </div>
 </div>
+
+
