--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
@@ -2,7 +2,7 @@
 
   <div [formGroup]="fileUpload">
     <ng-container>
-      <button [disabled]="isdisabled"
+      <button
           *ngIf="!showFileUpload"
           class="family-button"
           mat-button
