--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
@@ -67,9 +67,9 @@
           <div class="col-md-3"><span>Total Net Invoices being Claimed:</span></div>
           <div class="col-md-3">
             <span>
-              {{
+              $&nbsp;{{
                 recoveryPlanFormAbstract
-                  .totalInvoicesBeingClaimed
+                  .totalInvoicesBeingClaimed | number
               }}
             </span>
           </div>
@@ -79,9 +79,9 @@
           <div class="col-md-3"><span>Claim PST:</span></div>
           <div class="col-md-3">
             <span>
-              {{
+              $&nbsp;{{
                 recoveryPlanFormAbstract
-                  .claimPST
+                  .claimPST | number
               }}
             </span>
           </div>
@@ -92,9 +92,9 @@
           <div class="col-md-3"><span>Claim Gross GST:</span></div>
           <div class="col-md-3">
             <span>
-              {{
+              $&nbsp;{{
                 recoveryPlanFormAbstract
-                  .claimGrossGST
+                  .claimGrossGST | number
               }}
             </span>
           </div>
@@ -105,9 +105,9 @@
           <div class="col-md-3"><span>Total Actual Claim:</span></div>
           <div class="col-md-3">
             <span>
-              {{
+              $&nbsp;{{
                 recoveryPlanFormAbstract
-                  .totalActualClaim
+                  .totalActualClaim | number
               }}
             </span>
           </div>
