--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/invoice/invoice.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/invoice/invoice.component.html
@@ -70,14 +70,6 @@
                   ></mat-datepicker-toggle>
                   <mat-datepicker #invoiceDatePicker [disabled]="isReadOnly === true"
                   ></mat-datepicker>
-                  <mat-error
-                    *ngIf="
-                    invoiceForm.get('invoiceDate').invalid &&
-                    invoiceForm.get('invoiceDate').hasError('required')
-                  "
-                  >
-                    Invoice date is required</mat-error
-                  >
                   
                 </mat-form-field>
               </div>
@@ -94,7 +86,15 @@
                   required
                   aria-label="Select an option">
                   <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-                </mat-radio-group><br/>
+                  
+                   <mat-error *ngIf="
+                                  invoiceForm.get('isGoodsReceivedonInvoiceDate').invalid &&
+                                  invoiceForm.get('isGoodsReceivedonInvoiceDate').hasError('required')
+                                ">
+                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This is required
+                   </mat-error>
+                  </mat-radio-group>
+                
               </div>
             </div>
             <div class="row" [hidden]="(formCreationService.invoiceForm$ | async)?.value
@@ -109,20 +109,12 @@
                     [matDatepicker]="goodsReceivedDatePicker"
                     [readonly]="isReadOnly === true"
                     formControlName="goodsReceivedDate"
-                    required >
+                    >
                   <mat-hint>MM/DD/YYYY</mat-hint>
                   <mat-datepicker-toggle matSuffix [for]="goodsReceivedDatePicker" [disabled]="isReadOnly === true"
                   ></mat-datepicker-toggle>
                   <mat-datepicker #goodsReceivedDatePicker [disabled]="isReadOnly === true"
                   ></mat-datepicker>
-                  <mat-error
-                    *ngIf="
-                    invoiceForm.get('goodsReceivedDate').invalid &&
-                    invoiceForm.get('goodsReceivedDate').hasError('required')
-                  "
-                  >
-                    Date is required</mat-error
-                  >
     
                 </mat-form-field>
               </div>
@@ -141,7 +133,10 @@
                     style="resize:none"
                     maxlength="200"></textarea>
                   <!--<mat-hint>{{ remainingLength }} characters remaining.</mat-hint>-->
-                </mat-form-field><br/>
+                   
+                </mat-form-field>
+                
+                <br/>
               </div>
             </div>
 
@@ -157,7 +152,14 @@
                   (change)="selectDamageDates($event)"
                   aria-label="Select an option">
                   <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-                </mat-radio-group><br/>
+                  <mat-error *ngIf="
+                                 invoiceForm.get('isClaimforPartofTotalInvoice').invalid &&
+                                 invoiceForm.get('isClaimforPartofTotalInvoice').hasError('required')
+                               ">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This is required
+                  </mat-error>
+                  </mat-radio-group><br/>
+                   
               </div>
             </div>
 
@@ -172,7 +174,6 @@
                     (focusin)="setHelpText(2, tooltip)"
                     formControlName="reasonClaimingPartofTotalInvoice"
                     [rows]="4"
-                    required
                     style="resize:none"
                     maxlength="200"></textarea>
                   <!--<mat-hint>{{ remainingLength }} characters remaining.</mat-hint>-->
@@ -198,12 +199,12 @@
                         id="currencyBoxnetInvoiceBeingClaimed"
                         formControlName="netInvoiceBeingClaimed"
                         matInput
+                             required
                              (keypress)="numericOnly($event);"
                              (keyup)="CalculateInvoice($event);"
                         maxlength="100"/>
                       <span class="currencyText">CA$</span>
                     </div>
-    
                   </mat-form-field>
                 </div>  
               </div>
@@ -325,7 +326,7 @@
           </div>
         <div class="col-md-3">
           <button class="button-s cancel" type="button" (click)="cancel()">Cancel</button>
-          <button class="button-p add-invoice" (click)="AddInvoice()">{{addeditInvoiceText}}</button>
+          <button type="submit" class="button-p add-invoice" (click)="AddInvoice()">{{addeditInvoiceText}}</button>
         </div>
       </div>
     </form>
