--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/supporting-documents-claim/supporting-documents-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/supporting-documents-claim/supporting-documents-claim.component.html
@@ -23,11 +23,11 @@
 
     <ng-container *ngIf="vieworedit !== 'viewOnly'"> <!-- Invoices -->
       <div class="row">
+            <!--*ngIf="fileUploadForm.hasError('noinvoices')"-->
         <div class="col-md-8" >
           <app-dfa-attachment
             title="Invoices"
             description="Attach Invoices"
-            *ngIf="fileUploadForm.hasError('noPreEventCondition')"
             requiredDocumentType="PreEvent"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
@@ -44,9 +44,9 @@
             diameter="50"
           >
           </app-loader>
-          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noPreEventCondition')">
+          <!--<mat-card class="row" *ngIf="!fileUploadForm.hasError('noinvoices')">
             <p class="sub-heading" style="font-size: 15px">Required invoices has been uploaded.</p>
-          </mat-card>
+          </mat-card>-->
         </div>
       </div>
       <br/>
@@ -55,11 +55,12 @@
     <ng-container *ngIf="vieworedit !== 'viewOnly'"> <!-- General Ledger -->
       <div class="row">
         <div class="col-md-8">
+            <!--*ngIf="fileUploadForm.hasError('nogeneralledger')"-->
+
           <app-dfa-attachment
             isdisabled="isdisabled"
             title="General Ledger"
             description="Attach General Ledger."
-            *ngIf="fileUploadForm.hasError('noPostEventCondition')"
             requiredDocumentType="PostEvent"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
@@ -76,9 +77,9 @@
             diameter="50"
           >
           </app-loader>
-          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noPostEventCondition')">
+          <!--<mat-card class="row" *ngIf="!fileUploadForm.hasError('nogeneralledger')">
             <p class="sub-heading" style="font-size: 15px">Required general ledger has been uploaded.</p>
-          </mat-card>
+          </mat-card>-->
         </div>
       </div>
       <br/>
@@ -87,11 +88,12 @@
     <ng-container *ngIf="vieworedit !== 'viewOnly'"> <!-- Proof of Payment -->
       <div class="row">
         <div class="col-md-8">
+          <!--*ngIf="fileUploadForm.hasError('noproofofpayment')"-->
           <app-dfa-attachment
             isdisabled="isdisabled"
             title="Proof of Payment"
             description="Attach Proof of Payment."
-            *ngIf="fileUploadForm.hasError('noPostEventCondition')"
+            
             requiredDocumentType="PostEvent"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
@@ -108,9 +110,9 @@
             diameter="50"
           >
           </app-loader>
-          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noPostEventCondition')">
+          <!--<mat-card class="row" *ngIf="!fileUploadForm.hasError('noproofofpayment')">
             <p class="sub-heading" style="font-size: 15px">Required proof of payment has been uploaded.</p>
-          </mat-card>
+          </mat-card>-->
         </div>
       </div>
       <br/>
@@ -142,18 +144,18 @@
       </div>
     </ng-container>
 
-    <div *ngIf="documentSummaryDataSource.data.length == 0">
+    <div *ngIf="claimDocumentSummaryDataSource.data.length == 0">
       <br />
       <br />
       <br />
     </div>
 
-    <div *ngIf="documentSummaryDataSource.data.length > 0">
+    <div *ngIf="claimDocumentSummaryDataSource.data.length > 0">
       <br />
       <p class="sub-heading" style="font-size: 15px">Document Summary</p>
     </div>
 
-    <table mat-table [dataSource]="documentSummaryDataSource" *ngIf="documentSummaryDataSource.data.length > 0" style="width:100%">
+    <table mat-table [dataSource]="claimDocumentSummaryDataSource" *ngIf="claimDocumentSummaryDataSource.data.length > 0" style="width:100%">
       <!-- File Name Column -->
       <ng-container matColumnDef="fileName" style="width:25%">
         <th mat-header-cell *matHeaderCellDef >
@@ -234,7 +236,10 @@
     </table>
 
     <!--<mat-error *ngIf="fileUploadForm.hasError('noPreEventCondition') && isformUploaddisabled != 'true' && vieworedit !== 'viewOnly'">
-      <br/>Previous event condition is required.
+      <br/>Invoice is required.
+    </mat-error>
+    <mat-error *ngIf="fileUploadForm?.hasError('noPostEventCondition') && isformUploaddisabled != 'true' && vieworedit !== 'viewOnly'">
+      <br/>Post event condition is required.
     </mat-error>
     <mat-error *ngIf="fileUploadForm?.hasError('noPostEventCondition') && isformUploaddisabled != 'true' && vieworedit !== 'viewOnly'">
       <br/>Post event condition is required.
