--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/supporting-documents-project/supporting-documents-project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/supporting-documents-project/supporting-documents-project.component.html
@@ -178,7 +178,7 @@
       </ng-container>
 
       <!-- Delete Icon Column -->
-      <ng-container matColumnDef="icons" style="width:25%">
+      <!--<ng-container matColumnDef="icons" style="width:25%">
         <th mat-header-cell *matHeaderCellDef>
           &nbsp;
         </th>
@@ -194,7 +194,7 @@
             <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
           </button>
         </td>
-      </ng-container>
+      </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="documentSummaryColumnsToDisplay"></tr>
       <tr
