Updated @angular/material, @angular/cdk angular-oauth2-oidc libraries to be compitable with angular 18

--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -24,8 +24,8 @@
   /* Safari, Android, iOS */
 }
 
-$custom-typography: mat.define-typography-config($font-family: $font-family-sans-serif,
-    $body-2: mat.define-typography-level(15px, 1.6, 400));
+$custom-typography: mat.m2-define-typography-config($font-family: $font-family-sans-serif,
+    $body-2: mat.m2-define-typography-level(15px, 1.6, 400));
 
 /* TODO(mdc-migration): Remove all-legacy-component-typographies once all legacy components are migrated */
 @include mat.all-component-typographies($custom-typography);
