--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.scss
@@ -132,3 +132,17 @@ button {
 button:focus {
   outline: 0px !important;
 }
+
+.no-applications {
+  background: #F6F9FC 0% 0% no-repeat padding-box;
+  padding-bottom: 80px;
+  padding-top: 80px;
+  border: 1px dashed grey;
+  display: flex;
+  justify-content: center;
+}
+
+.no-applications-text {
+  font-size: 20px;
+  color: #606060;
+}
