--- a/dfa-public/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
@@ -35,11 +35,9 @@
             <button mat-button class="button-align" [matMenuTriggerFor]="menu">
               <div class="row">
                 <div class="col-md-8">
-                  <span style="color: white"
-                    ><b>{{ "Wayne" }}</b
-                    >,
-                    {{ "Bruce" }}</span
-                  >
+                  <span style="color: white">
+                    <b>{{ this.lastName }}</b>
+                  </span>
                 </div>
                 <div class="col-md-4">
                   <img
